resolved datepicker flickering issue

--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -49,3 +49,6 @@ body
     background-size: cover;
     background-attachment:fixed;
 }
+.well{
+  overflow: auto;
+}
